brackets after the features/fixes that the person contributed.  A list of
contributors can be found at the end of this document.  If all changes in a
specific alpha release have been made by the same person, the person is
only mentioned in the headline of that alpha release, rather than after
each feature.

Current Beta (not yet released)
-------------------------------
    - Fixed a crash when trying to route intransit mail without VIA
      kludge (this can only occur if other systems are misconfigured). [ED]
    - New keyword "RECODE". Simply do not use it. It is a TEMPORARY
      WORKAROUND for people in the Russian language area that do not yet
      support CHRS kludges according to FTSC. It takes as argument a
      recoding map similar to the one that hpt uses, and will recode all
      incoming messages from the transport to the local charset, and all
      outgoing charset from the local to the transport charset. [ED]
    - Fix: Fixed permissions of newly created directories on Unix. [ED]
    - Fix: Message hour, minute and second information in Squish folders 
      contained nonsensible values (message *read* only, so non-fatal). [ED]
    - Fix: The "EXCEPT" statement did not work as stated in the doc,
      (where it says that it applies to all node numbers following the
      EXCEPT keyword, and you have to specify another EXCEPT to undo the
      first one), but it did only apply to the nodenumer immediately 
      following the "EXCEPT". ATTENTION! THIS MAY BREAK EXISTING
      CONFIGURATION FILES! CAREFULLY CHECK YOUR USAGE OF THE EXCEPT 
      KEYWORD!!! [TE]
    - Fix: The "EXCEPT" statement did not work for "FROM" routes (EXCEPT
      clauses were always considered as applying to the "TO" mask). [TE]
    - Fix: Routing dependent on the day of the week did not work on Sundays
      (i.E. "U" was not recognised as specifying Sunday in the route
      statement). [TE]

0.95a [TE]
-----------