@@ -419,7 +419,7 @@ int MSGToPKT (char *MSGPath,char *PKTPath,char *ext,S_FQAddress via,S_FQAddress
 		headerPKT.OrigNode=OurAKA.Node;
 		headerPKT.DestNode=via.Node;
 		headerPKT.Year=dt.year;
-		headerPKT.Month=dt.month;
+		headerPKT.Month=dt.month - 1;
 		headerPKT.Day=dt.day;
 		headerPKT.Hour=dt.hours;
 		headerPKT.Minute=dt.minutes;
